# trends

./: .gitignore  README.md  commits.md  plan.md  pyproject.toml  requirements.txt  skills-lock.json  specification.md  wrangler.toml
demo/: demo_posts.json
migrations/: 0001_create_posts.sql
src/: config.py  main.py  worker.py
src/db/: client.py  repository.py
src/routes/: ingest.py  public.py
src/services/: post_service.py
src/templates/: base.html  home.html  landing.html  post_detail.html
static/css/: output.css
static/js/: bookmarks.js
static/logo/: site.webmanifest
templates/: base.html
tests/: test_bookmarks_ui.md  test_ingest_bulk_api.py  test_main_entrypoint.py  test_post_ranking.py  test_public_routes.py
